packages/shulker-operator/src/reconcilers/proxy_fleet/snapshots/shulker_operator__reconcilers__proxy_fleet__service__tests__build_snapshot.snap
---
source: packages/shulker-operator/src/reconcilers/proxy_fleet/service.rs
expression: service
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: proxy
    app.kubernetes.io/instance: proxy-my-proxy
    app.kubernetes.io/managed-by: shulker-operator
    app.kubernetes.io/name: proxy
    app.kubernetes.io/part-of: cluster-my-cluster
    minecraftcluster.shulkermc.io/name: my-cluster
    proxyfleet.shulkermc.io/name: my-proxy
  name: my-proxy
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
    - name: minecraft
      port: 25565
      protocol: TCP
      targetPort: minecraft
  selector:
    app.kubernetes.io/component: proxy
    app.kubernetes.io/instance: proxy-my-proxy
    app.kubernetes.io/managed-by: shulker-operator
    app.kubernetes.io/name: proxy
    app.kubernetes.io/part-of: cluster-my-cluster
    minecraftcluster.shulkermc.io/name: my-cluster
    proxyfleet.shulkermc.io/name: my-proxy
  type: LoadBalancer

